--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     background-color: black;
     color: whitesmoke;
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 h1{
@@ -11,4 +13,14 @@ h1{
 p{
     font-family: 'Courier New', Courier, monospace;
     font-size: 18px;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
