--- a/style.css
+++ b/style.css
@@ -24,3 +24,14 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: 100%;
+        padding: 0 10px;
+    }
+
+    p {
+        font-size: 16px;
+    }
+}
